# rust-study

./: .rustfmt.toml  Cargo.toml  README.md  Taskfile.yml  compose.yml
docker/: compose.yml
docker/cargo/: Dockerfile
docker/rust/: Dockerfile
setting/zed/: settings.json
src/1_hello_world/: format_print.rs  print_debug.rs
