[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"
default-run = "hello_world"

[dependencies]


# Biomeの設定を引用
# https://github.com/biomejs/biome/blob/main/Cargo.toml
[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
dead_code = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"

# Clippyの設定(Biomeの設定を引用)
# https://github.com/biomejs/biome/blob/main/Cargo.toml
[workspace.lints.clippy]

# cargo
# https://rust-lang.github.io/rust-clippy/master/index.html#/?groups=cargo
# すべての共通メタデータが Cargo.toml で定義されているかどうかを確認します。
cargo_common_metadata = "allow"

# nursery
# https://rust-lang.github.io/rust-clippy/master/index.html#/?groups=nursery
# if ブロックと else ブロックに、ブロック外に移動できる共有コードが含まれているかどうかを確認します。
branches_sharing_code = "deny"
# 認知的複雑性の高いメソッドをチェックします。
cognitive_complexity = 'warn'
# 組み込みメソッドを使用して表現できる浮動小数点式を探します。
imprecise_flops = "deny"
# 共通のマクロが一貫した中括弧で使用されていることを確認します。
nonstandard_macro_braces = "deny"

option_if_let_else = "deny"


# pedantic
# https://rust-lang.github.io/rust-clippy/master/index.html#/?groups=pedantic
# ネストされていない or パターンをチェックします。
unnested_or_patterns = "warn"
# async として宣言されているが、内部に .await がない関数をチェックします。
unused_async = "warn"
# 自己引数を含むが使用されていないメソッドをチェックします
unused_self = "warn"
# コード内のどこかにサイズがゼロの値型を持つマップがないかチェックします。
zero_sized_map_values = "warn"

# restriction
# https://rust-lang.github.io/rust-clippy/master/index.html#/?groups=restriction
# dbg の使用状況をチェックします。
dbg_macro = "warn"

# suspicious
# https://rust-lang.github.io/rust-clippy/master/index.html#/?groups=suspicious


[[bin]]
name = "hello_world"
path = "src/main.rs"

[[bin]]
name = "format_print"
path = "src/1_hello_world/format_print.rs"
